--- a/index.html
+++ b/index.html
@@ -6,95 +6,17 @@
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-
-body {
-  margin: 0;
-  font-family: 'Montserrat', Arial, sans-serif;
-  text-align: center;
-  background: #fefefe;
-  color: #333;
-}
-
-.header {
-  margin-top: 50px;
-}
-
-.header h2 {
-  font-size: 50px;
-  font-weight: 700;
-  margin: 0;
-  color: #222;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  min-height: 60px;
-}
-
-.header h1 {
-  font-size: 38px;
-  margin-top: 15px;
-  font-weight: 500;
-  color: #555;
-}
-
-.options {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 65%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 100px;
-}
-
-.circle {
-  width: 260px;
-  height: 260px;
-  border-radius: 50%;
-  border: none;
-  font-size: 36px;
-  cursor: pointer;
-  transition: 0.3s ease;
-  box-shadow: 0 14px 35px rgba(0,0,0,0.15);
-  background: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #333;
-}
-
-.circle span {
-  margin-top: 12px;
-  font-size: 22px;
-  font-weight: 600;
-}
-
-.circle:hover {
-  transform: scale(1.08);
-  box-shadow: 0 18px 45px rgba(0,0,0,0.2);
-}
-
-.selected {
-  transform: scale(1.12);
-  background-color: #e0f7ff;
-  box-shadow: 0 20px 55px rgba(0,0,0,0.25);
-}
-
-#thankYou {
-  position: absolute;
-  bottom: 40px;
-  width: 100%;
-  font-size: 28px;
-  font-weight: 500;
-  opacity: 0;
-  transition: opacity 0.4s ease;
-  color: #007acc;
-}
-
-.show {
-  opacity: 1;
-}
+body { margin:0; font-family:'Montserrat',Arial,sans-serif; text-align:center; background:#fefefe; color:#333; }
+.header { margin-top:50px; }
+.header h2 { font-size:50px; font-weight:700; margin:0; color:#222; letter-spacing:2px; text-transform:uppercase; min-height:60px; }
+.header h1 { font-size:38px; margin-top:15px; font-weight:500; color:#555; }
+.options { position:absolute; bottom:0; width:100%; height:65%; display:flex; justify-content:center; align-items:center; gap:100px; }
+.circle { width:260px; height:260px; border-radius:50%; border:none; font-size:36px; cursor:pointer; transition:0.3s ease; box-shadow:0 14px 35px rgba(0,0,0,0.15); background:#fff; display:flex; flex-direction:column; justify-content:center; align-items:center; color:#333; }
+.circle span { margin-top:12px; font-size:22px; font-weight:600; }
+.circle:hover { transform:scale(1.08); box-shadow:0 18px 45px rgba(0,0,0,0.2); }
+.selected { transform:scale(1.12); background-color:#e0f7ff; box-shadow:0 20px 55px rgba(0,0,0,0.25); }
+#thankYou { position:absolute; bottom:40px; width:100%; font-size:28px; font-weight:500; opacity:0; transition:opacity 0.4s ease; color:#007acc; }
+.show { opacity:1; }
 </style>
 </head>
 <body>
@@ -105,75 +27,45 @@ body {
 </div>
 
 <div class="options">
-  <button class="circle" data-value="Loved it">
-    ❤️
-    <span>Loved it</span>
-  </button>
-
-  <button class="circle" data-value="Okay">
-    🙂
-    <span>Okay</span>
-  </button>
-
-  <button class="circle" data-value="Needs improvement">
-    ⚠️
-    <span>Needs Improvement</span>
-  </button>
+  <button class="circle" data-value="Loved it">❤️<span>Loved it</span></button>
+  <button class="circle" data-value="Okay">🙂<span>Okay</span></button>
+  <button class="circle" data-value="Needs improvement">⚠️<span>Needs Improvement</span></button>
 </div>
 
 <div id="thankYou">Thank you for your feedback!</div>
 
 <script>
-
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxavx84IuGrsBQ16m3WvidQAOW2FeScxo0Uybq1-CPg3hsl-yQCUUeoWqrsZKm7xHRX/exec";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz80vGpuAAqOBmzqNEt8nDChw3ylv0dQDxl4pMOz1G9nhMJiliq_i8FiCOUVg0f8ar7/exec"; // replace with your Apps Script Web App URL
 
 function getCurrentMeal() {
   const now = new Date();
   const totalMinutes = now.getHours() * 60 + now.getMinutes();
 
-  const breakfastStart = 7 * 60;        // 7:00 AM
-  const breakfastEnd = 11 * 60 + 59;    // 11:59 AM
-  const lunchStart = 12 * 60;           // 12:00 PM
-  const lunchEnd = 17 * 60 + 29;        // 5:29 PM
-  const dinnerStart = 17 * 60 + 30;     // 5:30 PM
-  const dinnerEnd = 21 * 60;            // 9:00 PM
-
-  if (totalMinutes >= breakfastStart && totalMinutes <= breakfastEnd) {
-    return "Breakfast";
-  } else if (totalMinutes >= lunchStart && totalMinutes <= lunchEnd) {
-    return "American Menu";
-  } else if (totalMinutes >= dinnerStart && totalMinutes <= dinnerEnd) {
-    return "Dinner";
-  } else {
-    return "";
-  }
+  if (totalMinutes >= 7*60 && totalMinutes <= 11*60+59) return "Breakfast";
+  if (totalMinutes >= 12*60 && totalMinutes <= 17*60+29) return "American Menu";
+  if (totalMinutes >= 17*60+30 && totalMinutes <= 21*60) return "Dinner";
+  return "";
 }
 
 function setMealHeader() {
-  const header = document.getElementById("mealHeader");
-  header.textContent = getCurrentMeal();
+  document.getElementById("mealHeader").textContent = getCurrentMeal();
 }
 
-// Run immediately
 setMealHeader();
-
-// Update every second for exact minute switching
-setInterval(setMealHeader, 1000);
+setInterval(setMealHeader, 1000); // update every second
 
 document.querySelectorAll(".circle").forEach(button => {
   button.addEventListener("click", function () {
-
     const feedbackValue = this.dataset.value;
     const mealType = getCurrentMeal();
+    if (!mealType) return; // prevent empty meal submissions
 
     this.classList.add("selected");
 
     fetch(SCRIPT_URL, {
       method: "POST",
-      body: JSON.stringify({
-        meal: mealType,
-        response: feedbackValue
-      })
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ meal: mealType, response: feedbackValue })
     });
 
     const thankYou = document.getElementById("thankYou");
@@ -185,7 +77,6 @@ document.querySelectorAll(".circle").forEach(button => {
     }, 2000);
   });
 });
-
 </script>
 
 </body>
