--- a/index.html
+++ b/index.html
@@ -62,17 +62,15 @@ document.querySelectorAll(".circle").forEach(button => {
 
     this.classList.add("selected");
 
+    // Send data to Google Apps Script
     fetch(SCRIPT_URL, {
       method: "POST",
-      headers: { "Content-Type": "application/json" },
+      mode: "no-cors",
       body: JSON.stringify({
         meal: mealType,
         response: feedbackValue
       })
-    })
-    .then(res => res.json())
-    .then(data => console.log("Success:", data))
-    .catch(err => console.error("Error:", err));
+    });
 
     const thankYou = document.getElementById("thankYou");
     thankYou.classList.add("show");
